# loom-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  evaluation_report.md
.github/workflows/: ci.yml  publish.yml
benches/: mab.rs  runtime.rs
docs/: mab.md  sim.md
examples/: adaptive_workload.rs  mab_evaluation.rs  sim_ping_pong.rs  sim_pipeline.rs  wake_latency_benchmark.rs
hooks/: install.sh  pre-commit
loom-macros/: Cargo.toml
loom-macros/src/: lib.rs
src/: affinity.rs  bridge.rs  builder.rs  config.rs  context.rs  cpuset.rs  cuda.rs  error.rs  lib.rs  pool.rs  runtime.rs  stream.rs
src/mab/: calibration.rs  knobs.rs  metrics.rs  mod.rs  scheduler.rs  types.rs
src/metrics/: mod.rs  prometheus.rs
src/sim/: handle.rs  mod.rs  queue.rs  runtime.rs  time.rs
tests/: macro_tests.rs
