[package]
name = "loom-rs"
version = "0.1.0"
edition = "2021"
description = "Weaving multiple threads together - A bespoke thread pool runtime combining tokio and rayon with CPU pinning capabilities"
license = "MIT"
repository = "https://github.com/ryanolson/loom-rs"
keywords = ["async", "runtime", "threadpool", "cpu-affinity", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
rayon = "1.10"
diatomic-waker = "0.2"
parking_lot = "0.12"
crossbeam-queue = "0.3"
figment = { version = "0.10", features = ["env", "toml", "yaml", "json"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
core_affinity = "0.8"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
hwlocality = { version = "1.0.0-alpha.11", optional = true }
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = []
cuda = ["hwlocality", "nvml-wrapper"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
toml = "0.8"
serde_json = "1"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "runtime"
harness = false
