[package]
name = "loom-rs"
version = "0.2.0"
edition = "2021"
description = "Weaving threads together - A bespoke thread pool runtime combining tokio and rayon with CPU pinning capabilities"
license = "MIT"
repository = "https://github.com/ryanolson/loom-rs"
keywords = ["async", "runtime", "threadpool", "cpu-affinity", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
rayon = "1.10"
diatomic-waker = "0.2"
parking_lot = "0.12"
crossbeam-queue = "0.3"
figment = { version = "0.10", features = ["env", "toml", "yaml", "json"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
core_affinity = "0.8"
tracing = "0.1"
futures-core = "0.3"
pin-project-lite = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
prometheus = { version = "0.13", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
hwlocality = { version = "1.0.0-alpha.11", optional = true }
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = []
cuda = ["hwlocality", "nvml-wrapper"]
cuda-tests = ["cuda"]  # Enable hardware-dependent CUDA tests

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
toml = "0.8"
serde_json = "1"
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "wake_latency_benchmark"

[[example]]
name = "adaptive_workload"

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "mab"
harness = false

[[example]]
name = "mab_evaluation"

[profile.release]
lto = "thin"           # Link-time optimization (thin for faster builds)
codegen-units = 1      # Single codegen unit for better optimization
opt-level = 3          # Maximum optimization

[profile.bench]
lto = "thin"
codegen-units = 1
