[package]
name = "loom-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for loom-rs runtime"
keywords = ["async", "runtime", "threadpool", "macro"]
categories = ["asynchronous", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
